feat: add build-push workflow;

--- a/utils/Taskfile.yaml
+++ b/utils/Taskfile.yaml
@@ -12,3 +12,54 @@ tasks:
         PREFIX="{{.SERVICE_RELEASE_TAG}}@"
         echo "${TAG#${PREFIX}}"
     silent: true
+
+  generate-version-tag:
+    desc: "Combine the image repo with the version tag"
+    vars:
+      SERVICE_RELEASE_TAG: "{{.CLI_ARGS}}"
+      VERSION:
+        sh: task -s generate-version -- {{.SERVICE_RELEASE_TAG}}
+    cmds:
+      - |
+        echo "{{.IMAGE_REPO}}:{{.VERSION}}"
+
+  manual-version-tag:
+    desc: "Combine the image repo with the input version tag"
+    vars:
+      VERSION: "{{.CLI_ARGS}}"
+    cmds:
+      - |
+        echo "{{.IMAGE_REPO}}:{{.VERSION}}"
+
+  generate-extended-version:
+    desc: "Emit X.Y.Z-000N-g<SHA> using generate-version as the base"
+    vars:
+      SERVICE_RELEASE_TAG: "{{.CLI_ARGS}}"
+      BASE_VERSION:
+        sh: task -s generate-version -- {{.SERVICE_RELEASE_TAG}}
+    cmds:
+      - |
+        set -euo pipefail
+
+        GIT_VERSION="{{.BASE_VERSION}}"
+
+        # Ensure we have the -N-g<sha> suffix
+        if [[ ! $GIT_VERSION =~ -g[0-9a-fA-F]+$ ]]; then
+          GIT_HASH="$(git rev-parse --short HEAD)"
+          GIT_VERSION="${GIT_VERSION}-0-g${GIT_HASH}"
+        fi
+
+        # Split and zero-pad the count (N)
+        IFS='-' read -r BASE_VER COUNT GREF <<<"$GIT_VERSION"
+        printf "%s-%04d-%s\n" "$BASE_VER" "$COUNT" "$GREF"
+    silent: true
+
+  generate-extended-version-tag:
+    desc: "Combine the image repo with the version tag"
+    vars:
+      SERVICE_RELEASE_TAG: "{{.CLI_ARGS}}"
+      VERSION:
+        sh: task -s generate-extended-version -- {{.SERVICE_RELEASE_TAG}}
+    cmds:
+      - |
+        echo "{{.IMAGE_REPO}}:{{.VERSION}}"
