--- a/services/other/api-golang-migrator/Taskfile.yaml
+++ b/services/other/api-golang-migrator/Taskfile.yaml
@@ -1,7 +1,7 @@
 version: "3"
 
 vars:
-  IMAGE_REPO: sidpalas/devops-directive-kubernetes-course-db-migrator
+  IMAGE_REPO: tyler0ps/db-migrator
   IMAGE_TAG: foobarbaz
   SERVICE_RELEASE_TAG: services/other/api-golang-migrator
 
@@ -24,6 +24,21 @@ tasks:
         CONTAINER_ID=$(docker ps -q --filter "ancestor=postgres:16.3-alpine")
         docker cp ./migrations/000001_create_users_table.up.sql $CONTAINER_ID:/tmp/
         docker exec $CONTAINER_ID psql -U "postgres" -f /tmp/000001_create_users_table.up.sql
+
+  build-container-image:
+    desc: Build container image
+    cmds:
+      - docker build -t {{.IMAGE_REPO}}{{.IMAGE_TAG}} .
+
+  build-container-image-multi-arch:
+    desc: Build multi-arch container image
+    cmds:
+      - |
+        docker buildx build \
+        --platform linux/amd64,linux/arm64 \
+        -t {{.IMAGE_REPO}}:{{.IMAGE_TAG}} \
+        --push \
+        .
 
   install-ci:
     desc: install/download package dependencies
