--- a/services/python/load-generator-python/Taskfile.yaml
+++ b/services/python/load-generator-python/Taskfile.yaml
@@ -1,7 +1,7 @@
 version: "3"
 
 vars:
-  IMAGE_REPO: sidpalas/devops-directive-kubernetes-course-load-generator-python
+  IMAGE_REPO: tyler0ps/python-load-generator
   IMAGE_TAG: foobarbaz
   SERVICE_RELEASE_TAG: services/python/load-generator-python
 
@@ -15,6 +15,21 @@ tasks:
     desc: Install load generator dependencies
     cmds:
       - poetry install --no-root
+
+  build-container-image:
+    desc: Build container image
+    cmds:
+      - docker build -t {{.IMAGE_REPO}}:{{.IMAGE_TAG}} .
+
+  build-container-image-multi-arch:
+    desc: Build multi-arch container image
+    cmds:
+      - |
+        docker buildx build \
+        --platform linux/amd64,linux/arm64 \
+        -t {{.IMAGE_REPO}}:{{.IMAGE_TAG}} \
+        --push \
+        .
 
   install-ci:
     desc: install/download package dependencies
