--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -98,13 +98,13 @@ jobs:
           INPUT_VERSION: ${{ github.event_name == 'workflow_dispatch' && inputs.version || '' }}
           ENVIRONMENT: ${{ needs.changes.outputs.environment }}
         run: |
-          if [ -n $INPUT_VERSION ]; then
+          if [ -n "$INPUT_VERSION" ] && [ "$INPUT_VERSION" != "" ]; then
             version=$INPUT_VERSION
             image_tag=$(task utils:manual-version-tag -- $INPUT_VERSION)
-          elif [ $ENVIRONMENT = "production" ]; then
+          elif [ "$ENVIRONMENT" = "production" ]; then
             version=$(task utils:generate-version -- $SERVICE)
             image_tag=$(task utils:generate-version-tag -- $SERVICE)
-          else 
+          else
             version=$(task utils:generate-extended-version -- $SERVICE)
             image_tag=$(task utils:generate-extended-version-tag -- $SERVICE)
           fi
