--- a/utils/Taskfile.yaml
+++ b/utils/Taskfile.yaml
@@ -97,3 +97,57 @@ tasks:
           IDENTIFIER_COMMENT: "# {{.ENVIRONMENT}}_{{.SERVICE_RELEASE_TAG}}"
           STARTING_PATH:
             sh: git rev-parse --show-toplevel
+
+  git:commit-push:
+    desc: "Commit & push changes to a branch with exponential backoff retries"
+    vars:
+      COMMIT_MSG: '{{.COMMIT_MSG | default "chore: automated update [skip ci]"}}'
+      BRANCH: '{{.BRANCH | default "main"}}'
+      MAX_RETRIES: "{{.MAX_RETRIES| default 5}}"
+      BASE_DELAY: "{{.BASE_DELAY | default 2}}" # seconds, first backoff step
+      JITTER_MAX: "{{.JITTER_MAX | default 3}}" # additional random seconds
+    cmds:
+      - |
+        set -euo pipefail
+
+        # Bail if nothing to commit
+        if git diff --quiet; then
+          echo "No changes to commit."
+          exit 0
+        fi
+
+        # Configure identity (override via env if you want)
+        : "${GIT_USER_NAME:=github-actions[bot]}"
+        : "${GIT_USER_EMAIL:=${GITHUB_ACTOR_ID:-41898282}+${GITHUB_ACTOR:-github-actions[bot]}@users.noreply.github.com}"
+
+        git config user.name  "$GIT_USER_NAME"
+        git config user.email "$GIT_USER_EMAIL"
+
+        git add -A
+        git commit -m "{{.COMMIT_MSG}}"
+
+        attempt=1
+        while [ $attempt -le "{{.MAX_RETRIES}}" ]; do
+          git fetch origin "{{.BRANCH}}"
+
+          if ! git rebase "origin/{{.BRANCH}}"; then
+            echo "Rebase failed; aborting and retrying..."
+            git rebase --abort || true
+          fi
+
+          if git push origin HEAD:"{{.BRANCH}}"; then
+            echo "Push succeeded on attempt $attempt"
+            exit 0
+          fi
+
+          delay=$(( {{.BASE_DELAY}} * 2**(attempt-1) ))
+          jitter=$(( RANDOM % {{.JITTER_MAX}} ))
+          sleep_time=$(( delay + jitter ))
+          echo "Push failed (attempt $attempt). Retrying in ${sleep_time}s (base=${delay}s, jitter=${jitter}s)..."
+          sleep "$sleep_time"
+
+          attempt=$(( attempt + 1 ))
+        done
+
+        echo "Push failed after {{.MAX_RETRIES}} attempts" >&2
+        exit 1
