--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -69,6 +69,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: changes
+    permissions:
+      contents: read
+      actions: write # Required for gh workflow run
     if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != ''}}
     strategy:
       matrix:
