chore(update-gitops-manifests): add permission

--- a/.github/workflows/update-gitops-manifests.yaml
+++ b/.github/workflows/update-gitops-manifests.yaml
@@ -33,7 +33,9 @@ concurrency:
 jobs:
   update-manifest:
     runs-on: ubuntu-latest
-    # environment: ${{ inputs.environment }}
+    environment: ${{ inputs.environment }}
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v6
         with:
