--- a/.github/workflows/update-gitops-manifests.yaml
+++ b/.github/workflows/update-gitops-manifests.yaml
@@ -1,4 +1,5 @@
 name: Update GitOps Manifests
+run-name: "Deploy ${{ inputs.service }} ${{ inputs.version }} to ${{ inputs.environment }}"
 
 on:
   workflow_dispatch:
