--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -91,6 +91,17 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Configure AWS Credentials
+        if: ${{ !env.ACT }}
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      - name: Login to Amazon ECR
+        if: ${{ !env.ACT }}
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -117,12 +128,33 @@ jobs:
           echo "Version: ${version}"
           echo "version=${version}" >> $GITHUB_OUTPUT
           echo "image_tag=${image_tag}" >> $GITHUB_OUTPUT
+      - name: Generate ECR image tags
+        id: ecr-tags
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          SERVICE: ${{ matrix.service }}
+          VERSION: ${{ steps.image-tag.outputs.version }}
+          ENVIRONMENT: ${{ needs.changes.outputs.environment }}
+        run: |
+          # Extract service name from path (e.g., services/go/api-golang -> api-golang)
+          service_name=$(basename "$SERVICE")
+          ecr_repo="${ECR_REGISTRY}/generic-gha/${service_name}"
+
+          # Generate tags for ECR
+          ecr_tags="${ecr_repo}:${VERSION}"
+          ecr_tags="${ecr_tags},${ecr_repo}:${ENVIRONMENT}"
+          ecr_tags="${ecr_tags},${ecr_repo}:latest"
+
+          echo "ecr_tags=${ecr_tags}" >> $GITHUB_OUTPUT
+          echo "ECR tags: ${ecr_tags}"
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.service }}
           push: ${{ !env.ACT }}
-          tags: ${{ steps.image-tag.outputs.image_tag}}
+          tags: |
+            ${{ steps.image-tag.outputs.image_tag }}
+            ${{ steps.ecr-tags.outputs.ecr_tags }}
           platforms: linux/arm64 # linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
