--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,6 +56,7 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     needs: changes
+    if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != ''}}
     strategy:
       matrix:
         service: ${{ fromJson(needs.changes.outputs.services) }}
