chore(unit-test): skip unit test if there is no service changes

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,10 +20,8 @@ on:
     paths:
       - services/**
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
+    paths:
+      - services/**
 
 jobs:
   changes:
