--- a/.github/workflows/destroy-cloud-infra.yaml
+++ b/.github/workflows/destroy-cloud-infra.yaml
@@ -32,9 +32,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+      - name: Configure AWS Credentials
+        if: ${{ !env.ACT }}
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
       - name: HashiCorp - Setup Terraform
         uses: hashicorp/setup-terraform@v3.1.2
       - name: Terraform Destroy
+        if: ${{ !env.ACT }}
         run: |
           cd terraform/environments/${{ inputs.environment }}/${{ inputs.stack }}
           terraform init
