--- a/.github/workflows/destroy-cloud-infra.yaml
+++ b/.github/workflows/destroy-cloud-infra.yaml
@@ -33,7 +33,6 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Configure AWS Credentials
-        if: ${{ !env.ACT }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -41,15 +40,18 @@ jobs:
           aws-region: ap-southeast-1
       - name: HashiCorp - Setup Terraform
         uses: hashicorp/setup-terraform@v3.1.2
-      - name: Terraform Destroy
-        if: ${{ !env.ACT }}
+      - name: Terraform Destroy Plan
+        working-directory: terraform/environments/${{ inputs.environment }}/${{ inputs.stack }}
         run: |
           cd terraform/environments/${{ inputs.environment }}/${{ inputs.stack }}
           terraform init
           terraform plan -destroy
+      - name: Terraform Destroy Apply
+        working-directory: terraform/environments/${{ inputs.environment }}/${{ inputs.stack }}
+        run: |
           if [ "${{ inputs.destroy }}" = "true" ]; then
           echo "Destruction confirmed. Proceeding with terraform destroy..."
-          # terraform destroy -auto-approve
+          terraform destroy -auto-approve
           else
             echo "Destruction not confirmed. Set 'destroy' input to true to proceed."
           fi
