--- a/services/node/api-node/package.json
+++ b/services/node/api-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-node",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "simple api that connects to postgres",
   "main": "src/index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pg": "^8.8.0"
