--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -72,6 +72,7 @@ jobs:
     permissions:
       contents: read
       actions: write # Required for gh workflow run
+      id-token: write # Required for OIDC
     if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != ''}}
     strategy:
       matrix:
@@ -95,8 +96,7 @@ jobs:
         if: ${{ !env.ACT }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ vars.AWS_ECR_ROLE_ARN }}
           aws-region: ap-southeast-1
       - name: Login to Amazon ECR
         if: ${{ !env.ACT }}
