--- a/.github/workflows/destroy-cloud-infra.yaml
+++ b/.github/workflows/destroy-cloud-infra.yaml
@@ -31,13 +31,15 @@ concurrency:
 jobs:
   terraform-destroy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Required for OIDC
+      contents: read
     steps:
       - uses: actions/checkout@v6
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ vars.AWS_TERRAFORM_ROLE_ARN }}
           aws-region: ap-southeast-1
       - name: HashiCorp - Setup Terraform
         uses: hashicorp/setup-terraform@v3.1.2
