--- a/deploy/kubernetes/overlays/staging/api-golang/patches.yaml
+++ b/deploy/kubernetes/overlays/staging/api-golang/patches.yaml
@@ -5,6 +5,13 @@ metadata:
 spec:
   replicas: 1
   template:
-    metadata:
-      labels:
-        compute-type: fargate
+    spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/arch
+                operator: In
+                values:
+                - arm64
